--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,8 +1,12 @@
 @font-face {
   font-family: "Roboto";
-  src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype");
+  src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype"), url("fonts/Roboto-Bold-webfont.ttf") format("truetype"), url("fonts/Roboto-Black-webfont.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
+}
+
+@font-face {
+  font-family: "shrikhand";
+  src: url("fonts/shrikhand-Regular.otf") format("opentype");
 }
 
 * {
@@ -10,15 +14,170 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Roboto", impact;
+  font-family: "Roboto", impact, serif;
 }
 
+.logo img {
+  width: 60%;
+  text-align: center;
+  height: 45px;
+  margin-top: 20px;
+  margin-left: 70px;
+  border: yellow solid;
+}
+
+/*.........1ere section............*/
+.suiteheader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.rechercher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 35px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 20px;
+  border: blue solid;
+}
+
+.icone {
+  border: solid springgreen;
+  font-size: 25px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #3b3a3a;
+}
+
+.ville {
+  font-size: 18px;
+  text-align: center;
+  font-weight: 600;
+  width: 80%;
+  color: #3b3a3a;
+  font-size: 25px;
+  border: none;
+}
+
+.explorer {
+  text-align: center;
+  height: 450px;
+  padding-top: 40px;
+  background-color: #f5f4f4;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: 800;
+}
+
+h1 + p {
+  color: #3b3a3a;
+  font-size: 30px;
+}
+
+button {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px;
+  border-radius: 40px;
+  font-size: 25px;
+  background-color: #FF79DA;
+  color: white;
+}
+
+.fonctionnement {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 500px;
+  width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  border: violet solid;
+}
+
+h2 {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+  font-size: 40px;
+}
+
+.choix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 16px;
+  height: 100px;
+  width: 100%;
+  border: red solid;
+}
+
+.num {
+  border-radius: 50%;
+  background-color: #9356DC;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  padding: 2px 8px;
+  margin-left: 10px;
+  position: relative;
+}
+
+.choix i {
+  border: solid green;
+  margin-right: 20px;
+}
+
+.choix_contenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 25px;
+  width: 100%;
+  background-color: #f5f4f4;
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
+/*...........2eme section............*/
 .restaurants {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 1300px;
+  height: 1400px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -29,6 +188,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #f5f4f4;
+  margin-top: 40px;
 }
 
 .carte {
@@ -40,6 +201,9 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 80%;
+  height: 250px;
+  margin-bottom: 20px;
+  border-radius: 20px;
   border: green solid;
 }
 
@@ -50,8 +214,9 @@
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 200px;
-  border: red solid;
+  height: 170px;
+  border-radius: 20px 20px 0 0;
+  border: blue solid;
 }
 
 .description {
@@ -60,11 +225,23 @@
   display: flex;
   width: 100%;
   height: 80px;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-left: 10px;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px;
+  border-radius: 0 0 20px 20px;
   border: blue solid;
+}
+
+.description i {
+  font-size: 25px;
+  margin-top: 10px;
+  padding-right: 10px;
 }
 /*# sourceMappingURL=style.css.map */
