--- a/SASS/base/_fondations.scss
+++ b/SASS/base/_fondations.scss
@@ -1,9 +1,12 @@
 @font-face {
-    font-family: "Roboto";
+    font-family: "Robotoreg";
     src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype"),
-        url("fonts/Roboto-Bold-webfont.ttf") format("truetype"),
         url("fonts/Roboto-Black-webfont.ttf") format("truetype");
     font-weight: normal;
+}
+@font-face {
+    font-family: "Robotobold";
+    src: url("fonts/Roboto-Bold-webfont.ttf") format("truetype");
 }
 @font-face {
     font-family: "shrikhand";
@@ -14,6 +17,5 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Roboto", impact, serif;
+    font-family: "Robotoreg", impact, serif;
 }
-
