--- a/SASS/layouts/_headeretfooter.scss
+++ b/SASS/layouts/_headeretfooter.scss
@@ -5,5 +5,36 @@
     height: 45px;
     margin-top: 20px;
     margin-left: 70px;
-    border: yellow solid;
+}
+footer
+{
+    height: 240px;
+    width: 100%;
+    background-color:$texte;
+}
+.logofooter p
+{
+    font-family: "shrikhand", impact, serif;
+    font-size: 20px;
+    color: white;
+    width: 35%;
+    padding-top: 30px;
+    margin-left: 30px;
+}
+.menu_footer
+{
+    margin-top: 15px;
+    margin-left: 30px;
+    line-height: 30px;
+}
+.menu_footer a
+{
+    color: white;
+    text-decoration: none;
+}
+.menu_footer i
+{
+    margin-right: 8px;
+    font-size: 15px;
+    text-align: center;
 }
