--- a/SASS/pages/_accueil.scss
+++ b/SASS/pages/_accueil.scss
@@ -6,134 +6,178 @@
 }
 	.rechercher
 	{
-    	display: flex;
-    	justify-content: center;
-    	width: 100%;
-    	align-items: center;
-    	padding-left: 35px;
+		display: flex;
+		justify-content: center;
+		width: 100%;
+		align-items: center;
 		padding-top: 20px;
 		padding-bottom: 20px;
 		margin-top: 20px;
-    	border: blue solid;
+		background-color: darken($cadre, $amount: 5%);
+		border-top: solid 4px darken($cadre, $amount: 10%);
 	}
 		.icone
 		{
-    		border: solid springgreen;
-    		font-size: 25px;
-    		justify-content: center;
+			font-size: 20px;
+			justify-content: center;
 			color: $texte;
+			margin-left: 30px;
 		}
 		.ville
 		{
-    		font-size: 18px;
-    		text-align: center;
-    		font-weight: 600;
-    		width: 80%;
+			font-size: 18px;
+			text-align: center;
+			font-weight: 600;
+			width: 80%;
 			color: $texte;
-			font-size: 25px;
+			font-size: 20px;
 			border: none;
-    
+			background: none;
 			}
 	.explorer
 	{
 		text-align: center;
-		height: 450px;
+		height: 300px;
+		width: 100%;
 		padding-top: 40px;
 		background-color: $cadre;
 	}
 		h1
 		{
-			font-size: 40px;
-			font-weight: 800;
+			@include fontbold;
+			margin-bottom: 15px;
+			margin-left: 40px;
+			margin-right: 40px;
 		}
 		h1+p
 		{
-			color: $texte;
-			font-size: 30px;
+			color: $texte +50%;
+			font-size: 20px;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
-		button
+		.explorer button
 		{
 			margin-top: 30px;
 			margin-bottom: 30px;
-			padding: 20px;
+			padding: 10px 20px;
 			border-radius: 40px;
-			font-size: 25px;
-			background-color: $secondaire;
+			font-size: 18px;
+			background: linear-gradient(to bottom right, $secondaire, $primaire);
 			color: white;
+			border: none;
 		}
 	.fonctionnement
 	{
 		display: flex;
 		flex-direction: column;
-		height: 500px;
+		height: 400px;
 		width: 100%;
+		padding-top: 50px;
 		justify-content: space-around;
-		border: violet solid;
 	}
 		h2
 		{
-			margin-top: 50px;
-			margin-bottom: 30px;
-			margin-left: 10px;	
-			font-size: 40px;
+			@include fontbold;
+			width: 80%;
+			margin-left: 30px;
+			margin-bottom: 20px;
+			text-align: start;
 		}
 		.choix
 		{
 			display: flex;
-			flex-direction: row;
 			align-items: center;
-			justify-content: center;
 			font-size: 16px;
-			height: 100px;
+			font-weight: 900;
+			height: 100%;
 			width: 100%;
-			border: red solid;
 		}
+			.fonctionnement button
+			{
+				border-radius: 25px;
+				height: 70px;
+				width: 85%;
+				box-shadow: ($texte +110%) 0px 6px 15px;
+				border: none;
+				margin-left: 30px;
+			}
+			.fonctionnement a
+			{
+				text-decoration: none;
+				color: black;
+			}
+			.fonctionnement a :hover
+			{
+				background-color: rgb(249, 233, 252);
+				border-radius: 25px;
+			}
 			.num
 			{
+				display: flex;
+				justify-content: center;
+				align-items: center;
 				border-radius: 50%;
 				background-color: $primaire;
-				align-items: center;
 				color: white;
-				padding: 2px 8px;
-				margin-left: 10px;
-				position: relative;
+				width: 30px;
+				height: 30px;
+				margin-left: -5%;
 			}
 			.choix i
 			{
-				border: solid green;
+				margin-left: 20px;
 				margin-right: 20px;
+				color: $texte +50%;
 			}
-			.choix_contenu
-			{
-				display: flex;
-				padding: 25px;
-				width: 100%;
-				background-color: $cadre;
-				border-radius: 20px;
-				margin-right: 10px;
-			}
+			
 /*...........2eme section............*/
 .restaurants
 {
 	display: flex;
 	width: 100%;
-	height: 1400px;
+	height: 1250px;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
 	background-color: $cadre;
 	margin-top: 40px;
-}
+}	
 	.carte
 	{
 		display: flex;
 		flex-direction: column;
-		width: 80%;
+		width: 90%;
 		height: 250px;
 		margin-bottom: 20px;
 		border-radius: 20px;
-		border: green solid;
+		box-shadow: ($texte +110%) 0px 6px 20px;
+		margin-left: 20px;
 	}
+		.carte a
+		{
+			text-decoration: none;
+			color: black;
+		}
+		.photo
+		{
+			display: flex;
+			flex-direction: column;
+		}
+		aside
+		{
+			display: flex;
+			background-color: $tertiaire;
+			width: 25%;
+			height: 30px;
+			color: darken($tertiaire, $amount: 40);
+			font-weight: 700;
+			justify-content: center;
+			align-items: center;
+			margin-top: 20px;
+			margin-left: 61%;
+			border-radius: 2px;
+			position: absolute;
+		}
 		.photo img
 		{
 			display: flex;
@@ -141,23 +185,22 @@
 			width: 100%;
 			height: 170px;
 			border-radius: 20px 20px 0 0;;
-			border:blue solid;
 		}
 		.description
 		{
 			display: flex;
 			width: 100%;
 			height: 80px;
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: space-between;
-			padding: 10px;
+			flex-direction: column;
+			padding-left: 10px;
+			padding-top: 20px;
 			border-radius: 0 0 20px 20px;
-			border: blue solid;
+			line-height: 5px;
 		}
 			.description i
 			{
 				font-size: 25px;
-				margin-top: 10px;
+				padding-left: 80%;
 				padding-right: 10px;
+				color: $texte;
 			}
