--- a/SASS/style.css
+++ b/SASS/style.css
@@ -1,7 +1,12 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype"), url("fonts/Roboto-Bold-webfont.ttf") format("truetype"), url("fonts/Roboto-Black-webfont.ttf") format("truetype");
+  font-family: "Robotoreg";
+  src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype"), url("fonts/Roboto-Black-webfont.ttf") format("truetype");
   font-weight: normal;
+}
+
+@font-face {
+  font-family: "Robotobold";
+  src: url("fonts/Roboto-Bold-webfont.ttf") format("truetype");
 }
 
 @font-face {
@@ -14,7 +19,7 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Roboto", impact, serif;
+  font-family: "Robotoreg", impact, serif;
 }
 
 .logo img {
@@ -23,7 +28,38 @@
   height: 45px;
   margin-top: 20px;
   margin-left: 70px;
-  border: yellow solid;
+}
+
+footer {
+  height: 240px;
+  width: 100%;
+  background-color: #3b3a3a;
+}
+
+.logofooter p {
+  font-family: "shrikhand", impact, serif;
+  font-size: 20px;
+  color: white;
+  width: 35%;
+  padding-top: 30px;
+  margin-left: 30px;
+}
+
+.menu_footer {
+  margin-top: 15px;
+  margin-left: 30px;
+  line-height: 30px;
+}
+
+.menu_footer a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu_footer i {
+  margin-right: 8px;
+  font-size: 15px;
+  text-align: center;
 }
 
 /*.........1ere section............*/
@@ -48,20 +84,20 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 35px;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-top: 20px;
-  border: blue solid;
+  background-color: rgba(233, 231, 231, 0.986);
+  border-top: solid 4px rgba(221, 217, 217, 0.986);
 }
 
 .icone {
-  border: solid springgreen;
-  font-size: 25px;
+  font-size: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   color: #3b3a3a;
+  margin-left: 30px;
 }
 
 .ville {
@@ -70,35 +106,45 @@
   font-weight: 600;
   width: 80%;
   color: #3b3a3a;
-  font-size: 25px;
+  font-size: 20px;
   border: none;
+  background: none;
 }
 
 .explorer {
   text-align: center;
-  height: 450px;
+  height: 300px;
+  width: 100%;
   padding-top: 40px;
-  background-color: #f5f4f4;
+  background-color: rgba(245, 244, 244, 0.986);
 }
 
 h1 {
-  font-size: 40px;
   font-weight: 800;
+  font-family: "Robotobold", impact, serif;
+  font-size: 25px;
+  margin-bottom: 15px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 h1 + p {
-  color: #3b3a3a;
-  font-size: 30px;
+  color: #6d6c6c;
+  font-size: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-button {
+.explorer button {
   margin-top: 30px;
   margin-bottom: 30px;
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 40px;
-  font-size: 25px;
-  background-color: #FF79DA;
+  font-size: 18px;
+  background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: white;
+  border: none;
 }
 
 .fonctionnement {
@@ -109,66 +155,78 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 500px;
+  height: 400px;
   width: 100%;
+  padding-top: 50px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  border: violet solid;
 }
 
 h2 {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  margin-left: 10px;
-  font-size: 40px;
+  font-weight: 800;
+  font-family: "Robotobold", impact, serif;
+  font-size: 25px;
+  width: 80%;
+  margin-left: 30px;
+  margin-bottom: 20px;
+  text-align: start;
 }
 
 .choix {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   font-size: 16px;
-  height: 100px;
+  font-weight: 900;
+  height: 100%;
   width: 100%;
-  border: red solid;
+}
+
+.fonctionnement button {
+  border-radius: 25px;
+  height: 70px;
+  width: 85%;
+  -webkit-box-shadow: #a9a8a8 0px 6px 15px;
+          box-shadow: #a9a8a8 0px 6px 15px;
+  border: none;
+  margin-left: 30px;
+}
+
+.fonctionnement a {
+  text-decoration: none;
+  color: black;
+}
+
+.fonctionnement a :hover {
+  background-color: #f9e9fc;
+  border-radius: 25px;
 }
 
 .num {
-  border-radius: 50%;
-  background-color: #9356DC;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: white;
-  padding: 2px 8px;
-  margin-left: 10px;
-  position: relative;
-}
-
-.choix i {
-  border: solid green;
-  margin-right: 20px;
-}
-
-.choix_contenu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 25px;
-  width: 100%;
-  background-color: #f5f4f4;
-  border-radius: 20px;
-  margin-right: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: white;
+  width: 30px;
+  height: 30px;
+  margin-left: -5%;
+}
+
+.choix i {
+  margin-left: 20px;
+  margin-right: 20px;
+  color: #6d6c6c;
 }
 
 /*...........2eme section............*/
@@ -177,7 +235,7 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 1400px;
+  height: 1250px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -185,10 +243,7 @@ h2 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #f5f4f4;
+  background-color: rgba(245, 244, 244, 0.986);
   margin-top: 40px;
 }
 
@@ -200,11 +255,49 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 80%;
+  width: 90%;
   height: 250px;
   margin-bottom: 20px;
   border-radius: 20px;
-  border: green solid;
+  -webkit-box-shadow: #a9a8a8 0px 6px 20px;
+          box-shadow: #a9a8a8 0px 6px 20px;
+  margin-left: 20px;
+}
+
+.carte a {
+  text-decoration: none;
+  color: black;
+}
+
+.photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+aside {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #99E2D0;
+  width: 25%;
+  height: 30px;
+  color: #278870;
+  font-weight: 700;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+  margin-left: 61%;
+  border-radius: 2px;
+  position: absolute;
 }
 
 .photo img {
@@ -216,7 +309,6 @@ h2 {
   width: 100%;
   height: 170px;
   border-radius: 20px 20px 0 0;
-  border: blue solid;
 }
 
 .description {
@@ -225,23 +317,20 @@ h2 {
   display: flex;
   width: 100%;
   height: 80px;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 10px;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 10px;
+  padding-top: 20px;
   border-radius: 0 0 20px 20px;
-  border: blue solid;
+  line-height: 5px;
 }
 
 .description i {
   font-size: 25px;
-  margin-top: 10px;
+  padding-left: 80%;
   padding-right: 10px;
+  color: #3b3a3a;
 }
 /*# sourceMappingURL=style.css.map */
