--- a/SASS/utils/_variables.scss
+++ b/SASS/utils/_variables.scss
@@ -2,4 +2,4 @@ $primaire: #9356DC;
 $secondaire: #FF79DA;
 $tertiaire: #99E2D0;
 $texte:rgb(59, 58, 58);
-$cadre:rgb(245, 244, 244)
+$cadre:rgba(245, 244, 244, 0.986);
