--- a/SASS/style.css
+++ b/SASS/style.css
@@ -46,9 +46,23 @@ footer {
 }
 
 .menu_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 15px;
   margin-left: 30px;
   line-height: 30px;
+  width: 55%;
+}
+
+.menu_footer ul {
+  list-style-type: none;
 }
 
 .menu_footer a {
@@ -57,9 +71,9 @@ footer {
 }
 
 .menu_footer i {
-  margin-right: 8px;
+  width: 10px;
+  margin-right: 15px;
   font-size: 15px;
-  text-align: center;
 }
 
 /*.........1ere section............*/
@@ -140,11 +154,22 @@ h1 + p {
   margin-bottom: 30px;
   padding: 10px 20px;
   border-radius: 40px;
-  font-size: 18px;
   background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
-  color: white;
   border: none;
+}
+
+.explorer a button {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+}
+
+.explorer a button:hover {
+  -webkit-box-shadow: #818080 0px 5px 10px;
+          box-shadow: #818080 0px 5px 10px;
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
 }
 
 .fonctionnement {
@@ -185,6 +210,15 @@ h2 {
   width: 100%;
 }
 
+.choix:hover {
+  background-color: #dfccf5;
+  border-radius: 25px;
+  -webkit-filter: brightness(1.02);
+          filter: brightness(1.02);
+  -webkit-box-shadow: #818080 0px 5px 10px;
+          box-shadow: #818080 0px 5px 10px;
+}
+
 .fonctionnement button {
   border-radius: 25px;
   height: 70px;
@@ -193,16 +227,6 @@ h2 {
           box-shadow: #a9a8a8 0px 6px 15px;
   border: none;
   margin-left: 30px;
-}
-
-.fonctionnement a {
-  text-decoration: none;
-  color: black;
-}
-
-.fonctionnement a :hover {
-  background-color: #f9e9fc;
-  border-radius: 25px;
 }
 
 .num {
@@ -227,6 +251,10 @@ h2 {
   margin-left: 20px;
   margin-right: 20px;
   color: #6d6c6c;
+}
+
+.choix:hover i {
+  color: #9356DC;
 }
 
 /*...........2eme section............*/
@@ -267,6 +295,12 @@ h2 {
 .carte a {
   text-decoration: none;
   color: black;
+}
+
+.carte a:hover {
+  -webkit-box-shadow: #818080 0px 5px 10px;
+          box-shadow: #818080 0px 5px 10px;
+  border-radius: 20px;
 }
 
 .photo {
