accueil et 1 page menu html et css à 80%

--- a/SASS/base/_fondations.scss
+++ b/SASS/base/_fondations.scss
@@ -11,6 +11,7 @@
 @font-face {
     font-family: "shrikhand";
     src: url("fonts/shrikhand-Regular.otf") format("opentype");
+    font-weight: normal;
 }
 *
 {
