--- a/SASS/layouts/_headeretfooter.scss
+++ b/SASS/layouts/_headeretfooter.scss
@@ -1,21 +1,26 @@
+.logo
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
 .logo img
 {
-    width: 60%;
-    text-align: center;
-    height: 45px;
+    width: 45%;
+    height: 35px;
     margin-top: 20px;
-    margin-left: 70px;
 }
 footer
 {
     height: 240px;
     width: 100%;
-    background-color:$texte;
+    background-color:black;
 }
 .logofooter p
 {
     font-family: "shrikhand", impact, serif;
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     width: 35%;
     padding-top: 30px;
@@ -34,6 +39,7 @@ footer
 .menu_footer ul
 {
     list-style-type: none;
+    font-size: 15px;
 }
 .menu_footer a
 {
