--- a/SASS/pages/_accueil.scss
+++ b/SASS/pages/_accueil.scss
@@ -8,10 +8,9 @@
 	{
 		display: flex;
 		justify-content: center;
-		width: 100%;
 		align-items: center;
-		padding-top: 20px;
-		padding-bottom: 20px;
+		width: 100%;
+		height: 70px;
 		margin-top: 20px;
 		background-color: darken($cadre, $amount: 5%);
 		border-top: solid 4px darken($cadre, $amount: 10%);
@@ -19,18 +18,16 @@
 		.icone
 		{
 			font-size: 20px;
-			justify-content: center;
-			color: $texte;
-			margin-left: 30px;
+			margin-left: 10%;
 		}
 		.ville
 		{
 			font-size: 18px;
-			text-align: center;
 			font-weight: 600;
+			text-align: center;
 			width: 80%;
 			color: $texte;
-			font-size: 20px;
+			font-size: 16px;
 			border: none;
 			background: none;
 			}
@@ -48,6 +45,7 @@
 			margin-bottom: 15px;
 			margin-left: 40px;
 			margin-right: 40px;
+			font-size: 25px;
 		}
 		h1+p
 		{
@@ -69,7 +67,7 @@
 		{
 			text-decoration: none;
 			color: white;
-			font-size: 18px;
+			font-size: 16px;
 		}
 		.explorer a button:hover
 		{
@@ -82,13 +80,14 @@
 		flex-direction: column;
 		height: 400px;
 		width: 100%;
-		padding-top: 50px;
+		padding-top: 30px;
 		justify-content: space-around;
 	}
 		h2
 		{
 			@include fontbold;
 			width: 80%;
+			font-size: 25px;
 			margin-left: 30px;
 			margin-bottom: 20px;
 			text-align: start;
