--- a/SASS/style-menu.css
+++ b/SASS/style-menu.css
@@ -12,6 +12,7 @@
 @font-face {
   font-family: "shrikhand";
   src: url("fonts/shrikhand-Regular.otf") format("opentype");
+  font-weight: normal;
 }
 
 * {
@@ -29,20 +30,80 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 100%;
 }
 
 .logo img {
-  width: 40%;
-  height: 20%;
+  width: 45%;
+  height: 35px;
+  margin-top: 20px;
 }
 
-.photo img {
+footer {
+  height: 240px;
+  width: 100%;
+  background-color: black;
+}
+
+.logofooter p {
+  font-family: "shrikhand", impact, serif;
+  font-size: 18px;
+  color: white;
+  width: 35%;
+  padding-top: 30px;
+  margin-left: 30px;
+}
+
+.menu_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 15px;
+  margin-left: 30px;
+  line-height: 30px;
+  width: 55%;
+}
+
+.menu_footer ul {
+  list-style-type: none;
+  font-size: 15px;
+}
+
+.menu_footer a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu_footer i {
+  width: 10px;
+  margin-right: 15px;
+  font-size: 15px;
+}
+
+main {
+  background: rgba(245, 244, 244, 0.986);
+  border-radius: 30px 30px 0 0;
+  width: 100%;
+  position: relative;
+  margin-top: -10%;
+  padding-top: 35px;
+}
+
+.photo_menu img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
   height: 200px;
-  border: solid red;
+  margin-top: 20px;
 }
 
 .titre {
@@ -54,7 +115,15 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 16px;
+}
+
+.titre h1 {
+  font-family: "shrikhand", impact, serif;
+  font-size: 25px;
+}
+
+.titre i {
+  font-size: 25px;
 }
 
 .detailmenu {
@@ -76,6 +145,12 @@
 .detailmenu h2 {
   margin-bottom: 20px;
   font-size: 16px;
+  margin-left: 20px;
+  border-bottom: solid #99E2D0;
+  padding-bottom: 5px;
+  margin-bottom: -5px;
+  width: 12%;
+  color: #727171;
 }
 
 h4 {
@@ -83,15 +158,10 @@ h4 {
   font-weight: 800;
 }
 
-.description {
-  font-size: 14px;
-}
-
-article {
+.menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: red solid;
   background-color: white;
   border-radius: 20px;
   -webkit-box-orient: vertical;
@@ -102,9 +172,12 @@ article {
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-left: 10px;
+  padding-left: 15px;
   margin-left: 20px;
-  padding-right: 10px;
+  padding-right: 20px;
+  margin-bottom: 0px;
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
 }
 
 .descriptiontarif {
@@ -119,6 +192,45 @@ article {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: -10px;
-  border: springgreen solid;
+  font-size: 14px;
+}
+
+.description_menu {
+  color: #727171;
+}
+
+.tarif {
+  font-weight: 800;
+}
+
+.bouton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.bouton button {
+  margin-bottom: 50px;
+  padding: 15px 50px;
+  border-radius: 40px;
+  background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  border: none;
+}
+
+.bouton a button {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.bouton a button:hover {
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
 }
 /*# sourceMappingURL=style-menu.css.map */
