--- a/SASS/style-menu.scss
+++ b/SASS/style-menu.scss
@@ -1,90 +1,4 @@
-@font-face {
-    font-family: "Robotoreg";
-    src: url("fonts/Roboto-Regular-webfont.ttf") format("truetype"),
-        url("fonts/Roboto-Black-webfont.ttf") format("truetype");
-    font-weight: normal;
-}
-@font-face {
-    font-family: "Robotobold";
-    src: url("fonts/Roboto-Bold-webfont.ttf") format("truetype");
-}
-@font-face {
-    font-family: "shrikhand";
-    src: url("fonts/shrikhand-Regular.otf") format("opentype");
-}
-*
-{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Robotoreg", impact, serif;
-}
-.logo
-{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-.logo img
-{
-    width: 40%;
-    height: 20%;
-}
-.photo img
-{
-    object-fit: cover;
-    width: 100%;
-    height: 200px;
-    border: solid red;
-}
-.titre
-{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 16px;
-}
-.detailmenu
-{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    height: 900px;
-    margin-bottom: 50px;
-    justify-content: space-between;
-}
-.detailmenu h2
-{
-    margin-bottom: 20px;
-    font-size: 16px;
-}
-h4{
-    font-size: 16px;
-    font-weight: 800;
-}
-.description
-{
-    font-size: 14px;
-}
-article
-{
-    display: flex;
-    border: red solid;
-    background-color: white;
-    border-radius: 20px;
-    flex-direction: column;
-    width: 90%;
-    height: 60px;
-    justify-content: space-around;
-    padding-left: 10px;
-    margin-left: 20px;
-    padding-right: 10px;
-}
-.descriptiontarif
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: -10px;
-    border: springgreen solid;
-}
+@import "./utils/variables";
+@import "./base/fondations";
+@import "./layouts/headeretfooter";
+@import "./layouts/menu";
