--- a/SASS/style.css
+++ b/SASS/style.css
@@ -12,6 +12,7 @@
 @font-face {
   font-family: "shrikhand";
   src: url("fonts/shrikhand-Regular.otf") format("opentype");
+  font-weight: normal;
 }
 
 * {
@@ -22,23 +23,34 @@
   font-family: "Robotoreg", impact, serif;
 }
 
+.logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
 .logo img {
-  width: 60%;
-  text-align: center;
-  height: 45px;
+  width: 45%;
+  height: 35px;
   margin-top: 20px;
-  margin-left: 70px;
 }
 
 footer {
   height: 240px;
   width: 100%;
-  background-color: #3b3a3a;
+  background-color: black;
 }
 
 .logofooter p {
   font-family: "shrikhand", impact, serif;
-  font-size: 20px;
+  font-size: 18px;
   color: white;
   width: 35%;
   padding-top: 30px;
@@ -63,6 +75,7 @@ footer {
 
 .menu_footer ul {
   list-style-type: none;
+  font-size: 15px;
 }
 
 .menu_footer a {
@@ -74,6 +87,151 @@ footer {
   width: 10px;
   margin-right: 15px;
   font-size: 15px;
+}
+
+main {
+  background: rgba(245, 244, 244, 0.986);
+  border-radius: 30px 30px 0 0;
+  width: 100%;
+  position: relative;
+  margin-top: -10%;
+  padding-top: 35px;
+}
+
+.photo_menu img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 200px;
+  margin-top: 20px;
+}
+
+.titre {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.titre h1 {
+  font-family: "shrikhand", impact, serif;
+  font-size: 25px;
+}
+
+.titre i {
+  font-size: 25px;
+}
+
+.detailmenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 20px;
+  height: 900px;
+  margin-bottom: 50px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.detailmenu h2 {
+  margin-bottom: 20px;
+  font-size: 16px;
+  margin-left: 20px;
+  border-bottom: solid #99E2D0;
+  padding-bottom: 5px;
+  margin-bottom: -5px;
+  width: 12%;
+  color: #727171;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: 800;
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  border-radius: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 90%;
+  height: 60px;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-left: 15px;
+  margin-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 0px;
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
+}
+
+.descriptiontarif {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: -10px;
+  font-size: 14px;
+}
+
+.description_menu {
+  color: #727171;
+}
+
+.tarif {
+  font-weight: 800;
+}
+
+.bouton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.bouton button {
+  margin-bottom: 50px;
+  padding: 15px 50px;
+  border-radius: 40px;
+  background: -webkit-gradient(linear, left top, right bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  border: none;
+}
+
+.bouton a button {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.bouton a button:hover {
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
+  -webkit-filter: brightness(1.3);
+          filter: brightness(1.3);
 }
 
 /*.........1ere section............*/
@@ -94,12 +252,11 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  width: 100%;
+  height: 70px;
   margin-top: 20px;
   background-color: rgba(233, 231, 231, 0.986);
   border-top: solid 4px rgba(221, 217, 217, 0.986);
@@ -107,20 +264,16 @@ footer {
 
 .icone {
   font-size: 20px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #3b3a3a;
-  margin-left: 30px;
+  margin-left: 10%;
 }
 
 .ville {
   font-size: 18px;
-  text-align: center;
   font-weight: 600;
+  text-align: center;
   width: 80%;
-  color: #3b3a3a;
-  font-size: 20px;
+  color: #727171;
+  font-size: 16px;
   border: none;
   background: none;
 }
@@ -140,10 +293,11 @@ h1 {
   margin-bottom: 15px;
   margin-left: 40px;
   margin-right: 40px;
+  font-size: 25px;
 }
 
 h1 + p {
-  color: #6d6c6c;
+  color: #a4a3a3;
   font-size: 20px;
   margin-left: 10px;
   margin-right: 10px;
@@ -162,12 +316,12 @@ h1 + p {
 .explorer a button {
   text-decoration: none;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .explorer a button:hover {
-  -webkit-box-shadow: #818080 0px 5px 10px;
-          box-shadow: #818080 0px 5px 10px;
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
   -webkit-filter: brightness(1.3);
           filter: brightness(1.3);
 }
@@ -182,7 +336,7 @@ h1 + p {
           flex-direction: column;
   height: 400px;
   width: 100%;
-  padding-top: 50px;
+  padding-top: 30px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
@@ -192,6 +346,7 @@ h2 {
   font-family: "Robotobold", impact, serif;
   font-size: 25px;
   width: 80%;
+  font-size: 25px;
   margin-left: 30px;
   margin-bottom: 20px;
   text-align: start;
@@ -215,16 +370,16 @@ h2 {
   border-radius: 25px;
   -webkit-filter: brightness(1.02);
           filter: brightness(1.02);
-  -webkit-box-shadow: #818080 0px 5px 10px;
-          box-shadow: #818080 0px 5px 10px;
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
 }
 
 .fonctionnement button {
   border-radius: 25px;
   height: 70px;
   width: 85%;
-  -webkit-box-shadow: #a9a8a8 0px 6px 15px;
-          box-shadow: #a9a8a8 0px 6px 15px;
+  -webkit-box-shadow: #e0dfdf 0px 6px 15px;
+          box-shadow: #e0dfdf 0px 6px 15px;
   border: none;
   margin-left: 30px;
 }
@@ -250,7 +405,7 @@ h2 {
 .choix i {
   margin-left: 20px;
   margin-right: 20px;
-  color: #6d6c6c;
+  color: #a4a3a3;
 }
 
 .choix:hover i {
@@ -287,8 +442,8 @@ h2 {
   height: 250px;
   margin-bottom: 20px;
   border-radius: 20px;
-  -webkit-box-shadow: #a9a8a8 0px 6px 20px;
-          box-shadow: #a9a8a8 0px 6px 20px;
+  -webkit-box-shadow: #e0dfdf 0px 6px 20px;
+          box-shadow: #e0dfdf 0px 6px 20px;
   margin-left: 20px;
 }
 
@@ -298,8 +453,8 @@ h2 {
 }
 
 .carte a:hover {
-  -webkit-box-shadow: #818080 0px 5px 10px;
-          box-shadow: #818080 0px 5px 10px;
+  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
+          box-shadow: #b8b7b7 0px 5px 10px;
   border-radius: 20px;
 }
 
@@ -365,6 +520,6 @@ aside {
   font-size: 25px;
   padding-left: 80%;
   padding-right: 10px;
-  color: #3b3a3a;
+  color: #727171;
 }
 /*# sourceMappingURL=style.css.map */
