fichiers menu hml et css les 4

--- a/SASS/layouts/_headeretfooter.scss
+++ b/SASS/layouts/_headeretfooter.scss
@@ -15,7 +15,7 @@ footer
 {
     height: 240px;
     width: 100%;
-    background-color:black;
+    background-color: darken(grey, $amount: 30);
 }
 .logofooter p
 {
