--- a/SASS/layouts/_menu.scss
+++ b/SASS/layouts/_menu.scss
@@ -11,23 +11,25 @@ main
 {
     object-fit: cover;
     width: 100%;
-    height: 200px;
+    height: 250px;
     margin-top: 20px;
 }
 .titre
 {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .titre h1
 {
     font-family: "shrikhand", impact, serif; 
     font-size: 25px;
+    margin-left: 20px;
 }
 .titre i
 {
     font-size: 25px;
+    margin-right: 40px;
 }
 .detailmenu
 {
@@ -105,6 +107,6 @@ h4{
 }
 .bouton a button:hover
 {
-	box-shadow: $ombre;
+	box-shadow: $texte 0px 7px 15px;
 	filter: brightness(1.3);
 }
