--- a/SASS/pages/_accueil.scss
+++ b/SASS/pages/_accueil.scss
@@ -61,6 +61,7 @@
 			padding: 10px 20px;
 			border-radius: 40px;
 			background: $degrade;
+			
 			border: none;
 		}
 		.explorer a button
@@ -71,7 +72,7 @@
 		}
 		.explorer a button:hover
 		{
-			box-shadow: $ombre;
+			box-shadow: $texte 0px 7px 15px;
 			filter: brightness(1.3);
 		}
 	.fonctionnement
@@ -83,14 +84,21 @@
 		padding-top: 30px;
 		justify-content: space-around;
 	}
+		.fonctionnement button
+		{
+			border-radius: 25px;
+			height: 70px;
+			width: 85%;
+			box-shadow: ($texte +110%) 0px 6px 15px;
+			border: none;
+			margin-left: 30px;
+		}
 		h2
 		{
 			@include fontbold;
 			width: 80%;
 			font-size: 25px;
 			margin-left: 30px;
-			margin-bottom: 20px;
-			text-align: start;
 		}
 		.choix
 		{
@@ -108,15 +116,7 @@
 				filter: brightness(1.02);
 				box-shadow: $ombre;
 			}
-			.fonctionnement button
-			{
-				border-radius: 25px;
-				height: 70px;
-				width: 85%;
-				box-shadow: ($texte +110%) 0px 6px 15px;
-				border: none;
-				margin-left: 30px;
-			}
+			
 			.num
 			{
 				display: flex;
@@ -141,7 +141,7 @@
 			}
 			
 /*...........2eme section............*/
-.restaurants
+#restaurants
 {
 	display: flex;
 	width: 100%;
@@ -149,7 +149,9 @@
 	flex-direction: column;
 	justify-content: center;
 	background-color: $cadre;
-	margin-top: 40px;
+	margin-top: 30px;
+	padding-top: 30px;
+	padding-bottom: 50px;
 }	
 	.carte
 	{
