--- a/SASS/style-menu.css
+++ b/SASS/style-menu.css
@@ -45,7 +45,7 @@
 footer {
   height: 240px;
   width: 100%;
-  background-color: black;
+  background-color: #343434;
 }
 
 .logofooter p {
@@ -102,7 +102,7 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 200px;
+  height: 250px;
   margin-top: 20px;
 }
 
@@ -110,8 +110,9 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -120,10 +121,12 @@ main {
 .titre h1 {
   font-family: "shrikhand", impact, serif;
   font-size: 25px;
+  margin-left: 20px;
 }
 
 .titre i {
   font-size: 25px;
+  margin-right: 40px;
 }
 
 .detailmenu {
@@ -228,8 +231,8 @@ h4 {
 }
 
 .bouton a button:hover {
-  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
-          box-shadow: #b8b7b7 0px 5px 10px;
+  -webkit-box-shadow: #727171 0px 7px 15px;
+          box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.3);
           filter: brightness(1.3);
 }
