--- a/SASS/style.css
+++ b/SASS/style.css
@@ -45,7 +45,7 @@
 footer {
   height: 240px;
   width: 100%;
-  background-color: black;
+  background-color: #343434;
 }
 
 .logofooter p {
@@ -102,7 +102,7 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 200px;
+  height: 250px;
   margin-top: 20px;
 }
 
@@ -110,8 +110,9 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -120,10 +121,12 @@ main {
 .titre h1 {
   font-family: "shrikhand", impact, serif;
   font-size: 25px;
+  margin-left: 20px;
 }
 
 .titre i {
   font-size: 25px;
+  margin-right: 40px;
 }
 
 .detailmenu {
@@ -228,8 +231,8 @@ h4 {
 }
 
 .bouton a button:hover {
-  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
-          box-shadow: #b8b7b7 0px 5px 10px;
+  -webkit-box-shadow: #727171 0px 7px 15px;
+          box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.3);
           filter: brightness(1.3);
 }
@@ -320,8 +323,8 @@ h1 + p {
 }
 
 .explorer a button:hover {
-  -webkit-box-shadow: #b8b7b7 0px 5px 10px;
-          box-shadow: #b8b7b7 0px 5px 10px;
+  -webkit-box-shadow: #727171 0px 7px 15px;
+          box-shadow: #727171 0px 7px 15px;
   -webkit-filter: brightness(1.3);
           filter: brightness(1.3);
 }
@@ -341,6 +344,16 @@ h1 + p {
       justify-content: space-around;
 }
 
+.fonctionnement button {
+  border-radius: 25px;
+  height: 70px;
+  width: 85%;
+  -webkit-box-shadow: #e0dfdf 0px 6px 15px;
+          box-shadow: #e0dfdf 0px 6px 15px;
+  border: none;
+  margin-left: 30px;
+}
+
 h2 {
   font-weight: 800;
   font-family: "Robotobold", impact, serif;
@@ -348,8 +361,6 @@ h2 {
   width: 80%;
   font-size: 25px;
   margin-left: 30px;
-  margin-bottom: 20px;
-  text-align: start;
 }
 
 .choix {
@@ -372,16 +383,6 @@ h2 {
           filter: brightness(1.02);
   -webkit-box-shadow: #b8b7b7 0px 5px 10px;
           box-shadow: #b8b7b7 0px 5px 10px;
-}
-
-.fonctionnement button {
-  border-radius: 25px;
-  height: 70px;
-  width: 85%;
-  -webkit-box-shadow: #e0dfdf 0px 6px 15px;
-          box-shadow: #e0dfdf 0px 6px 15px;
-  border: none;
-  margin-left: 30px;
 }
 
 .num {
@@ -413,7 +414,7 @@ h2 {
 }
 
 /*...........2eme section............*/
-.restaurants {
+#restaurants {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -427,7 +428,9 @@ h2 {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: rgba(245, 244, 244, 0.986);
-  margin-top: 40px;
+  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
 .carte {
