probleme de liaison sass entre css et scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,7 @@
+@import "./utils/mixins";
 @import "./utils/variables";
 @import "./base/fondations";
 @import "./layouts/headeretfooter";
 @import "./layouts/menu";
+@import "./pages/accueil";
+
