--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -19,7 +19,7 @@
 		{
 			font-size: 20px;
 			margin-left: 10%;
-			color: red;
+			margin-right: 5px;
 		}
 		.ville
 		{
@@ -29,6 +29,7 @@
 			width: 80%;
 			color: $texte;
 			font-size: 16px;
+			background-color: $cadre;
 			}
 	.explorer
 	{
@@ -72,7 +73,7 @@
 		.explorer a button:hover
 		{
 			box-shadow: $texte 0px 7px 15px;
-			filter: brightness(1.3);
+			filter: brightness(1.1);
 		}
 	.fonctionnement
 	{
@@ -126,6 +127,7 @@
 				color: white;
 				width: 30px;
 				height: 30px;
+				margin-left: -13px;
 			}
 			.choix i
 			{
