--- a/sass/style.css
+++ b/sass/style.css
@@ -268,7 +268,7 @@ h4 {
 .icone {
   font-size: 20px;
   margin-left: 10%;
-  color: red;
+  margin-right: 5px;
 }
 
 .ville {
@@ -278,6 +278,7 @@ h4 {
   width: 80%;
   color: #727171;
   font-size: 16px;
+  background-color: rgba(245, 244, 244, 0.986);
 }
 
 .explorer {
@@ -324,8 +325,8 @@ h1 + p {
 .explorer a button:hover {
   -webkit-box-shadow: #727171 0px 7px 15px;
           box-shadow: #727171 0px 7px 15px;
-  -webkit-filter: brightness(1.3);
-          filter: brightness(1.3);
+  -webkit-filter: brightness(1.1);
+          filter: brightness(1.1);
 }
 
 .fonctionnement {
@@ -399,6 +400,7 @@ h2 {
   color: white;
   width: 30px;
   height: 30px;
+  margin-left: -13px;
 }
 
 .choix i {
