--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -37,7 +37,7 @@
 }
 
 .logo img {
-  width: 45%;
+  width: 50%;
   height: 35px;
   margin-top: 20px;
 }
@@ -96,6 +96,20 @@ main {
   position: relative;
   margin-top: -10%;
   padding-top: 35px;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 50px;
+}
+
+.fleche i {
+  margin-top: 25px;
+  margin-left: 20px;
+  color: black;
 }
 
 .photo_menu img {
@@ -233,7 +247,7 @@ h4 {
 .bouton a button:hover {
   -webkit-box-shadow: #727171 0px 7px 15px;
           box-shadow: #727171 0px 7px 15px;
-  -webkit-filter: brightness(1.3);
-          filter: brightness(1.3);
+  -webkit-filter: brightness(1.1);
+          filter: brightness(1.1);
 }
 /*# sourceMappingURL=style-menu.css.map */
