--- a/public/style.css
+++ b/public/style.css
@@ -96,12 +96,56 @@ footer {
   font-size: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .logo img {
+    width: 200px;
+    height: 50px;
+  }
+  footer {
+    height: 200px;
+  }
+  .menu_footer {
+    margin: 0;
+    width: 100%;
+  }
+  .menu_footer ul {
+    text-align: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    font-size: 16px;
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .menu_footer i {
+    width: 30px;
+    font-size: 18px;
+    margin-right: 20px;
+  }
+  .logofooter p {
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+  }
+}
+
+@media screen and (min-width: 1294px) {
+  .logo img {
+    width: 20%;
+  }
+}
+
 main {
   background: rgba(245, 244, 244, 0.986);
   border-radius: 30px 30px 0 0;
   width: 100%;
+  height: 1150px;
   position: relative;
-  margin-top: -10%;
+  margin-top: -15%;
   padding-top: 35px;
 }
 
@@ -123,7 +167,7 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 250px;
+  height: 50%;
   margin-top: 20px;
 }
 
@@ -173,7 +217,7 @@ main {
   border-bottom: solid #99E2D0;
   padding-bottom: 5px;
   margin-bottom: -5px;
-  width: 12%;
+  width: 45px;
   color: #727171;
 }
 
@@ -258,6 +302,95 @@ h4 {
           filter: brightness(1.1);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1293px) {
+  .photo_menu img {
+    height: 5%;
+  }
+  .fleche {
+    margin-left: 50px;
+  }
+  main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 50px;
+    padding-right: 40px;
+  }
+  .coeur {
+    margin-right: 60px;
+  }
+}
+
+@media screen and (min-width: 1294px) {
+  .photo_menu img {
+    height: 700px;
+  }
+  main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: -80px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .titre {
+    width: 60%;
+    margin-right: 100px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .titre h1 {
+    font-size: 30px;
+  }
+  .titre i {
+    font-size: 30px;
+  }
+  .detailmenu h2 {
+    font-size: 25px;
+    text-align: center;
+    margin-left: 50px;
+  }
+  .detailmenu {
+    width: 70%;
+    height: 1500px;
+  }
+  .descriptiontarif {
+    height: 70px;
+  }
+  h4 {
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  .menu {
+    height: 70px;
+  }
+  .description_menu {
+    font-size: 18px;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  .tarif {
+    font-size: 20px;
+    margin-right: 20px;
+  }
+  .bouton button {
+    width: 400px;
+  }
+  .bouton a button {
+    font-size: 22px;
+  }
+}
+
 /*.........1ere section............*/
 .suiteheader {
   display: -webkit-box;
@@ -287,12 +420,18 @@ h4 {
 }
 
 .icone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 20px;
   margin-left: 8%;
   margin-right: 5px;
 }
 
 .ville {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 18px;
   font-weight: 600;
   text-align: center;
@@ -358,21 +497,27 @@ h1 + p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 400px;
+  height: 370px;
   width: 100%;
-  padding-top: 30px;
+  margin-top: 40px;
+  margin-bottom: 10px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
 
-.fonctionnement button {
-  border-radius: 25px;
-  height: 70px;
-  width: 88%;
-  -webkit-box-shadow: #e0dfdf 0px 6px 15px;
-          box-shadow: #e0dfdf 0px 6px 15px;
-  border: none;
-  margin-left: 30px;
+.fonctionnement_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  height: 300px;
 }
 
 h2 {
@@ -388,22 +533,46 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 0;
   font-size: 16px;
   font-weight: 900;
   height: 100%;
   width: 100%;
 }
 
-.choix:hover {
+.choix:hover button {
   background-color: #dfccf5;
   border-radius: 25px;
   -webkit-filter: brightness(1.02);
           filter: brightness(1.02);
   -webkit-box-shadow: #b8b7b7 0px 5px 10px;
           box-shadow: #b8b7b7 0px 5px 10px;
+}
+
+.choix button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 25px;
+  height: 70px;
+  width: 88%;
+  -webkit-box-shadow: #e0dfdf 0px 6px 15px;
+          box-shadow: #e0dfdf 0px 6px 15px;
+  border: none;
+  margin-left: 30px;
 }
 
 .num {
@@ -450,7 +619,6 @@ h2 {
           justify-content: center;
   background-color: rgba(245, 244, 244, 0.986);
   margin-top: 30px;
-  padding-top: px;
 }
 
 .carte {
@@ -546,48 +714,50 @@ aside {
   color: #727171;
 }
 
-@media screen and (max-width: 2048px) and (min-width: 768px) {
-  .logo img {
-    border: yellow solid;
-    width: 35%;
-    height: 25%;
+@media screen and (min-width: 768px) {
+  .rechercher {
+    padding: 0;
   }
-  .icone {
-    margin-left: 0%;
-    font-size: 30px;
+  .icone i {
+    font-size: 25px;
+    padding: 0;
+    margin-left: -60px;
   }
   .ville {
-    width: 100%;
     height: 50px;
+    width: 100%;
     font-size: 20px;
+    margin-left: -30px;
   }
   h1 {
-    font-size: 28px;
+    font-size: 35px;
   }
   h1 + p {
     font-size: 20px;
     margin-top: 30px;
   }
   .explorer a button {
-    width: 40%;
+    width: 300px;
     font-size: 20px;
     margin-top: 50px;
   }
   .fonctionnement {
-    width: 80%;
+    width: 100%;
+    height: 400px;
     -ms-flex-pack: distribute;
         justify-content: space-around;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-left: 100px;
   }
   h2 {
-    font-size: 28px;
+    font-size: 30px;
     text-align: center;
     width: 100%;
     margin: 0;
-    border: springgreen solid;
+  }
+  .choix button {
+    width: 70%;
   }
   .choix h4, i {
     font-size: 18px;
@@ -598,50 +768,73 @@ aside {
     font-size: 20px;
     border-radius: 20px 0 0 20px;
     height: 100%;
-    width: 8%;
+    width: 50px;
   }
   .carte {
-    width: 80%;
-    margin-left: 100px;
+    width: 90%;
   }
   aside {
-    margin-left: 55%;
+    margin-left: 65%;
   }
-  footer {
+}
+
+@media screen and (min-width: 1294px) {
+  .ville {
+    width: 100%;
+  }
+  .fonctionnement {
     height: 200px;
   }
-  .menu_footer {
-    margin: 0;
-    width: 100%;
-  }
-  .menu_footer ul {
-    text-align: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    font-size: 16px;
-    width: 100%;
+  .fonctionnement_button {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    margin-top: 20px;
+    margin: 0%;
+    padding: 0%;
   }
-  .menu_footer i {
-    width: 30px;
-    font-size: 18px;
-    margin-right: 20px;
+  .num {
+    width: 50px;
   }
-  .logofooter p {
-    font-size: 30px;
-    text-align: center;
-    width: 100%;
-    margin: 0;
-    padding: 30px;
+  .choix button {
+    width: 80%;
+    margin: 0%;
+    padding: 0%;
   }
-}
-
-@media screen and (max-width: 2048px) and (min-width: 992px) {
-  .logo img {
-    width: 20%;
+  .choix {
+    width: 50%;
+  }
+  #restaurants {
+    margin: 0%;
+    padding-top: 50px;
+    height: 800px;
+  }
+  .restaurant_carte {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 600px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    width: 90%;
+    margin-left: 100px;
+    margin-top: 40px;
+  }
+  .carte {
+    width: 45%;
+    margin: 0%;
+    padding: 0;
+  }
+  aside {
+    margin-left: 30.5%;
+    width: 10%;
   }
 }
 /*# sourceMappingURL=style.css.map */
