--- a/sass/layouts/_headeretfooter.scss
+++ b/sass/layouts/_headeretfooter.scss
@@ -54,3 +54,50 @@ footer
     margin-right: 15px;
     font-size: 15px;
 }
+@media screen and (min-width: 768px)
+{
+    .logo img
+	{
+		width: 200px;
+		height: 50px;
+	}
+    footer
+	{
+		height: 200px;
+	}
+	.menu_footer
+	{
+		margin: 0;
+		width: 100%;
+	}
+	.menu_footer ul
+	{
+		text-align: center;
+		justify-content: space-around;
+		font-size: 16px;
+		width: 100%;
+		flex-direction: row;
+	
+	}
+	.menu_footer i
+	{
+		width: 30px;
+		font-size: 18px;
+		margin-right: 20px;
+	}
+	.logofooter p
+	{
+		font-size: 30px;
+		text-align: center;
+		width: 100%;
+		margin: 0;
+		padding: 30px;
+	}
+}
+@media screen and (min-width: 1294px)
+{
+    .logo img
+	{
+		width: 20%;
+	}
+}
