--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -3,8 +3,9 @@ main
     background: $cadre;
     border-radius: 30px 30px 0 0;
     width: 100%;
+    height: 1150px;
     position: relative;
-    margin-top: -10%;
+    margin-top: -15%;
     padding-top: 35px;
 }
 .header
@@ -23,7 +24,7 @@ main
 {
     object-fit: cover;
     width: 100%;
-    height: 250px;
+    height: 50%;
     margin-top: 20px;
 }
 .titre
@@ -60,10 +61,11 @@ main
     border-bottom: solid $tertiaire;
     padding-bottom: 5px;
     margin-bottom: -5px;
-    width: 12%;
+    width: 45px;
     color: $texte;
 }
-h4{
+h4
+{
     font-size: 16px;
     font-weight: 800;
 }
@@ -121,4 +123,98 @@ h4{
 {
 	box-shadow: $texte 0px 7px 15px;
 	filter: brightness(1.1);
+}
+@media screen and (min-width: 768px) and (max-width: 1293px)
+{
+    .photo_menu img
+    {
+        height: 5%;
+    }
+    .fleche
+    {
+        margin-left: 50px;
+    }
+    main
+    {
+        display: flex;
+        flex-direction: column;
+        padding-left: 50px;
+        padding-right: 40px;
+    }
+    .coeur
+    {
+        margin-right: 60px;
+    }
+}
+@media screen and (min-width: 1294px)
+{
+    .photo_menu img
+    {
+        height: 700px;
+    }
+    main
+    {
+        display: flex;
+        flex-direction: column;
+        margin-top: -80px;
+        align-items: center;
+    }
+    .titre
+    {
+        width: 60%;
+        margin-right: 100px;
+        justify-content: space-around;
+    }
+    .titre h1
+    {
+        font-size: 30px;
+    }
+    .titre i
+    {
+        font-size: 30px;
+    }
+    .detailmenu h2
+    {
+        font-size: 25px;
+        text-align: center;
+        margin-left: 50px;
+    }
+    .detailmenu
+    {
+        width: 70%;
+        height: 1500px;
+    }
+    .descriptiontarif
+    {
+        height: 70px;
+    }
+    h4
+    {
+        font-size: 20px;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    .menu
+    {
+        height: 70px;
+    }
+    .description_menu
+    {
+        font-size: 18px;
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    .tarif
+    {
+        font-size: 20px;
+        margin-right: 20px;
+    }
+    .bouton button
+    {
+       width: 400px;
+    }
+    .bouton a button
+    {
+        font-size: 22px;
+    }
 }
