--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -68,29 +68,40 @@ h4
 {
     font-size: 16px;
     font-weight: 800;
+    width: 100%;
+    margin-top: 10px;
+    color: black;
+}
+.blocmenu
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 220px;
 }
 .menu
 {
     display: flex;
     background-color: white;
     border-radius: 20px;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 90%;
     height: 60px;
     justify-content: space-around;
-    padding-left: 15px;
+    padding-left: 10px;
     margin-left: 20px;
-    padding-right: 20px;
-    margin-bottom: 0px;
     box-shadow: $ombre;
 }
+
 .descriptiontarif
 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: -10px;
     font-size: 14px;
+    width: 100%;
+    height: 35px;
 }
 .description_menu
 {
@@ -99,6 +110,41 @@ h4
 .tarif
 {
     font-weight: 800;
+    color: black;
+    margin-right: 10px;
+}
+.valide
+{
+    display: flex;
+    justify-content: center;
+    width: 0px;
+    
+}
+.valide i
+{
+    display: flex;
+    color: transparent;
+    border: red solid;
+   
+
+}
+.valide:hover i
+{
+    color: white;
+    align-items: center;
+    background-color: $tertiaire;
+    font-size: 20px;
+    padding: 10px;
+    width: 42px;
+    height: 60px;
+    margin-bottom: -100px;
+    margin-right: 40px;
+    border-radius: 0 20px 20px 0;
+    border:$tertiaire;
+}
+.menu:hover
+{
+    box-shadow: green 6px 6px 6px;
 }
 .bouton
 {
@@ -150,39 +196,63 @@ h4
 {
     .photo_menu img
     {
-        height: 700px;
+        height: 400px;
+        width: 100%;
+    }
+    .fleche
+    {
+        margin-left: 90px;
     }
     main
     {
         display: flex;
+        height: 900px;
         flex-direction: column;
-        margin-top: -80px;
+        margin-top: -10px;
+        border-radius: 0%;
         align-items: center;
     }
     .titre
     {
-        width: 60%;
-        margin-right: 100px;
+        width: 100%;
         justify-content: space-around;
+        margin-top: 30px;
     }
     .titre h1
     {
-        font-size: 30px;
+        font-size: 35px;
+        margin-bottom: 20px;
+        margin-left: 70px;
     }
     .titre i
     {
-        font-size: 30px;
+        font-size: 35px;
+        margin-bottom: 20px;
+    }
+    .menu
+    {
+        height: auto;
+        width: 30%;
     }
     .detailmenu h2
     {
         font-size: 25px;
-        text-align: center;
-        margin-left: 50px;
+        margin-left: -80%;
+        margin-top: 20px;
     }
     .detailmenu
     {
-        width: 70%;
-        height: 1500px;
+        width: 90%;
+        height: 550px;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .blocmenu
+    {
+        width: 90%;
+        justify-content: space-around;
+        flex-direction: row;
+        margin-top: 20px;
     }
     .descriptiontarif
     {
@@ -192,12 +262,9 @@ h4
     {
         font-size: 20px;
         margin-left: 20px;
-        margin-top: 10px;
+        margin-top: 15px;
     }
-    .menu
-    {
-        height: 70px;
-    }
+    
     .description_menu
     {
         font-size: 18px;
@@ -212,6 +279,7 @@ h4
     .bouton button
     {
        width: 400px;
+       margin-top: 30px;
     }
     .bouton a button
     {
