--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -141,15 +141,16 @@
 				border-radius: 50%;
 				background-color: $primaire;
 				color: white;
-				width: 30px;
+				width: 35px;
 				height: 30px;
 				margin-left: -13px;
 			}
 			.choix i
 			{
-				margin-left: 20px;
-				margin-right: 20px;
+				margin-left: 30px;
+				margin-right: -30px;
 				color: $texte +50%;
+				font-size: 20px;
 			}
 			.choix:hover i 
 			{
@@ -235,6 +236,7 @@
 				padding-right: 10px;
 				color: $texte;
 			}
+/*.....................TABLETTE................*/
 @media screen and (min-width: 768px)
 {
 	.rechercher
@@ -257,18 +259,21 @@
 	}
 	h1
 	{
-		font-size: 35px;
+		font-size: 30px;
 	}
 	h1+p
 	{
 		font-size: 20px;
 		margin-top: 30px;
 	}
+	.explorer
+	{
+		height: 270px;
+	}
 	.explorer a button
 	{
 		width: 300px;
 		font-size: 20px;
-		margin-top: 50px;
 	}
 	.fonctionnement
 	{
@@ -288,10 +293,10 @@
 	{
 		width: 70%;
 	}
-	.choix h4,i
+	.choix h4
 	{
 		font-size: 18px;
-		padding-left: 20px;
+		margin-left: -70px;
 	}
 	.num
 	{
@@ -304,14 +309,21 @@
 	.carte
 	{
 		width: 90%;
+		margin-left: 40px;
+		padding: 0;
 	
 	}
 	aside
 	{
 		margin-left: 65%;
 	}
+	.description i
+	{
+		margin-left: 90px;
+	}
 	
 }
+/*..................DESKTOP................................*/
 @media screen and (min-width: 1294px)
 {
 	.ville
@@ -333,6 +345,10 @@
 	{
 		width: 50px;
 	}
+	.choix i
+	{
+		margin-right: 50px;
+	}
 	.choix button
 	{
 		width: 80%;
@@ -346,25 +362,39 @@
 	#restaurants
 	{
 		margin: 0%;
-		padding-top: 50px;
-		height: 800px;
+		padding: 0%;
+		height: 1000px;
+		padding-bottom: 50px;
 	}
 	.restaurant_carte
 	{
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		height: 600px;
+		height: 800px;
 		justify-content: space-around;
 		width: 90%;
-		margin-left: 100px;
-		margin-top: 40px;
+		margin-left: 80px;
+		margin-top: 30px;
 	}
 	.carte
 	{
 		width: 45%;
-		margin: 0%;
+		height: 380px;
+		margin-bottom: 0px;
 		padding: 0;
+	}
+	.photo img
+	{
+		height: 300px ;
+	}
+	.description i
+	{
+		
+		padding: 0;
+		margin: 0;
+		margin-left: 90%;
+		
 	}
 	aside
 	{
