--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -38,7 +38,7 @@
 
 .logo img {
   width: 130px;
-  height: 35px;
+  height: auto;
   margin-top: 20px;
 }
 
@@ -98,8 +98,8 @@ footer {
 
 @media screen and (min-width: 768px) {
   .logo img {
-    width: 200px;
-    height: 50px;
+    width: 20%;
+    height: auto;
   }
   footer {
     height: 200px;
@@ -135,7 +135,9 @@ footer {
 
 @media screen and (min-width: 1294px) {
   .logo img {
-    width: 20%;
+    width: 15%;
+    height: auto;
+    margin-right: 100px;
   }
 }
 
@@ -224,6 +226,23 @@ main {
 h4 {
   font-size: 16px;
   font-weight: 800;
+  width: 100%;
+  margin-top: 10px;
+  color: black;
+}
+
+.blocmenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 220px;
 }
 
 .menu {
@@ -232,18 +251,18 @@ h4 {
   display: flex;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 90%;
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding-left: 15px;
+  padding-left: 10px;
   margin-left: 20px;
-  padding-right: 20px;
-  margin-bottom: 0px;
   -webkit-box-shadow: #b8b7b7 0px 5px 10px;
           box-shadow: #b8b7b7 0px 5px 10px;
 }
@@ -259,8 +278,9 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-top: -10px;
   font-size: 14px;
+  width: 100%;
+  height: 35px;
 }
 
 .description_menu {
@@ -269,6 +289,47 @@ h4 {
 
 .tarif {
   font-weight: 800;
+  color: black;
+  margin-right: 10px;
+}
+
+.valide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 0px;
+}
+
+.valide i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: transparent;
+  border: red solid;
+}
+
+.valide:hover i {
+  color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #99E2D0;
+  font-size: 20px;
+  padding: 10px;
+  width: 42px;
+  height: 60px;
+  margin-bottom: -100px;
+  margin-right: 40px;
+  border-radius: 0 20px 20px 0;
+  border: #99E2D0;
+}
+
+.menu:hover {
+  -webkit-box-shadow: green 6px 6px 6px;
+          box-shadow: green 6px 6px 6px;
 }
 
 .bouton {
@@ -327,41 +388,69 @@ h4 {
 
 @media screen and (min-width: 1294px) {
   .photo_menu img {
-    height: 700px;
+    height: 400px;
+    width: 100%;
+  }
+  .fleche {
+    margin-left: 90px;
   }
   main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 900px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: -80px;
+    margin-top: -10px;
+    border-radius: 0%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
   .titre {
-    width: 60%;
-    margin-right: 100px;
+    width: 100%;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    margin-top: 30px;
   }
   .titre h1 {
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 20px;
+    margin-left: 70px;
   }
   .titre i {
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+  .menu {
+    height: auto;
+    width: 30%;
   }
   .detailmenu h2 {
     font-size: 25px;
-    text-align: center;
-    margin-left: 50px;
+    margin-left: -80%;
+    margin-top: 20px;
   }
   .detailmenu {
-    width: 70%;
-    height: 1500px;
+    width: 90%;
+    height: 550px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .blocmenu {
+    width: 90%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 20px;
   }
   .descriptiontarif {
     height: 70px;
@@ -369,10 +458,7 @@ h4 {
   h4 {
     font-size: 20px;
     margin-left: 20px;
-    margin-top: 10px;
-  }
-  .menu {
-    height: 70px;
+    margin-top: 15px;
   }
   .description_menu {
     font-size: 18px;
@@ -385,6 +471,7 @@ h4 {
   }
   .bouton button {
     width: 400px;
+    margin-top: 30px;
   }
   .bouton a button {
     font-size: 22px;
