--- a/sass/style.css
+++ b/sass/style.css
@@ -303,7 +303,7 @@ h4 {
 .tarif {
   font-weight: 800;
   color: black;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .valide i {
@@ -315,7 +315,12 @@ h4 {
           transform: scale(1);
 }
 
-.valide:hover i {
+.menu:hover {
+  -webkit-box-shadow: grey 6px 6px 6px;
+          box-shadow: grey 6px 6px 6px;
+}
+
+.menu:hover .valide i {
   color: white;
   font-size: 20px;
   -webkit-box-align: center;
@@ -326,18 +331,13 @@ h4 {
           justify-content: center;
   padding: 8px;
   width: 0%;
-  margin-top: -31px;
+  margin-top: -31.5px;
   border-radius: 0 20px 20px 0;
   width: 50px;
   height: 60px;
   background-color: #99E2D0;
   -webkit-transition: scaleX(1.05);
   transition: scaleX(1.05);
-}
-
-.menu:hover {
-  -webkit-box-shadow: grey 6px 6px 6px;
-          box-shadow: grey 6px 6px 6px;
 }
 
 .bouton {
