--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -204,10 +204,6 @@ main {
   color: transparent;
 }
 
-.coeurrempli:hover i {
-  color: #9356DC;
-}
-
 .detailmenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -255,6 +251,8 @@ h4 {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 220px;
+  -webkit-transition: 2s;
+  transition: 2s;
 }
 
 .menu {
@@ -297,22 +295,24 @@ h4 {
 
 .description_menu {
   color: #727171;
+  white-space: nowrap;
   width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .tarif {
   font-weight: 800;
   color: black;
-  margin-right: 20px;
 }
 
-.valide i {
+.valide {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  -webkit-transform: rotate(0turn);
+          transform: rotate(0turn);
 }
 
 .menu:hover {
@@ -320,24 +320,30 @@ h4 {
           box-shadow: grey 6px 6px 6px;
 }
 
-.menu:hover .valide i {
+.menu:hover .valide {
   color: white;
-  font-size: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 8px;
-  width: 0%;
-  margin-top: -31.5px;
+  margin-top: -32px;
+  margin-left: 20px;
+  height: 61px;
+  padding: 13px;
   border-radius: 0 20px 20px 0;
-  width: 50px;
-  height: 60px;
   background-color: #99E2D0;
-  -webkit-transition: scaleX(1.05);
-  transition: scaleX(1.05);
+  -webkit-transition: 2000ms translateX(0, 0);
+  transition: 2000ms translateX(0, 0);
+}
+
+.menu:hover .valide i {
+  font-size: 20px;
+  -webkit-transform: rotate(1turn);
+          transform: rotate(1turn);
+  -webkit-transition: 900ms;
+  transition: 900ms;
 }
 
 .bouton {
