--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -248,7 +248,8 @@
 			}
 			.coeurrempli:hover i
 			{
-				color: $primaire;
+				background: linear-gradient(0deg, $secondaire, $primaire);
+				background-clip: text;
 			}
 
 
