--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -87,8 +87,32 @@ h4
     flex-direction: column;
     justify-content: space-between;
     height: 220px;
-    transition: 2s;
+
+    &--entree
+    {
+        animation: apparition-menu 2s;
+    }
+    &--plat
+    {
+        animation: apparition-menu 5s;
+    }
+    &--dessert
+    {
+        animation: apparition-menu 8s;
+    }
+    
 }
+@keyframes apparition-menu{
+    0%{
+    opacity: 0;  
+    transform: translateY(5vh);
+    }
+    100%{
+    opacity: 1;
+    transform: translateY(0);
+    }
+}
+
 .menu
 {
     display: flex;
@@ -101,7 +125,6 @@ h4
     justify-content: space-around;
     padding-left: 10px;
     margin-left: 20px;
-    box-shadow: $ombre;
 }
 .descriptiontarif
 {
@@ -146,7 +169,7 @@ h4
     padding: 13px;
     border-radius: 0 20px 20px 0;
     background-color: $tertiaire;
-    transition: 2000ms translateX(0,0);
+    transition: 900ms  translateX();
     }
     .valide i
     {
@@ -183,7 +206,7 @@ h4
 {
     .photo_menu img
     {
-        height: 5%;
+        height: 500px;
     }
     .fleche
     {
@@ -205,7 +228,7 @@ h4
 {
     .photo_menu img
     {
-        height: 400px;
+        height: 300px;
         width: 100%;
     }
     .fleche
@@ -235,7 +258,7 @@ h4
     .coeur i
     {
         font-size: 35px;
-        margin-bottom: 20px;
+        margin-top: -35px;
     }
     .menu
     {
@@ -257,7 +280,7 @@ h4
     }
     .blocmenu
     {
-        width: 90%;
+        width: 100%;
         justify-content: space-around;
         flex-direction: row;
         margin-top: 20px;
@@ -270,7 +293,7 @@ h4
     {
         font-size: 20px;
         margin-left: 20px;
-        margin-top: 15px;
+        margin-top: 20px;
     }
     
     .description_menu
@@ -284,6 +307,15 @@ h4
         font-size: 20px;
         margin-right: 20px;
     }
+    .menu:hover
+{
+    .valide
+    {
+        margin-top: -46px;
+        height: 117px;
+        padding: 20px;
+    }
+}
     .bouton button
     {
         width: 400px;
