--- a/sass/layouts/_headeretfooter.scss
+++ b/sass/layouts/_headeretfooter.scss
@@ -1,3 +1,4 @@
+
 .logo
 {
     display: flex;
@@ -100,6 +101,10 @@ footer
 	{
 		width: 10%;
 		height: auto;
-
+	}
+	.menu_footer ul
+	{
+		width: 50%;
+		margin-left: 510px;
 	}
 }
