--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -1,42 +1,31 @@
-/*
-@keyframes loader-spinner{
-0% {transform: rotate(0turn);
-	opacity:1;}
-100% {transform: rotate(5turn);
-		opacity:0;}
-}
-.loader
+.lienloader
 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-family: "shrikhand", impact, serif;
-	text-align: center;
-	font-size: 30px;
-	color: $texte;
-	width: 300px;
-	height: 300px;
-	border-radius: 50%;
-	box-shadow: 50px 30px 20px $secondaire inset;
-	position: absolute;
-	background:$degrade;
-	margin-top: 50%;
-	margin-left: 10%;
-	animation: loader-spinner 20s;
-}*/
+	animation: lienloader 2s 3s;
+	animation-fill-mode: both;
+}
 
+@keyframes lienloader{
+	0%{opacity: 0;}
+	100%{opacity:1;}
+}
 /*.........1ere section............*/
+main
+{
+	width: 100%;
+	height: 100%;
+	padding: 0;
+}
 .suiteheader
 {
     display: flex;
     flex-direction: column;
+	width: 100%;
 }
 	.rechercher
 	{
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		width: 100%;
 		height: 70px;
 		margin-top: 20px;
 		background-color: darken($cadre, $amount: 5%);
@@ -111,6 +100,7 @@
 		height: 370px;
 		width: 100%;
 		margin-top: 40px;
+		margin-left: -10px;
 		margin-bottom: 10px;
 		justify-content: space-around;
 	}
@@ -293,7 +283,7 @@
 	}
 	.icone i
 	{
-		font-size: 25px;
+		font-size: 20px;
 		padding: 0;
 		margin-left: -60px;
 
@@ -301,13 +291,13 @@
 	.ville
 	{
 			height: 50px;
-			width: 100%;
-			font-size: 20px;
+			width: 90%;
+			font-size: 18px;
 			margin-left: -30px;
 	}
 	h1
 	{
-		font-size: 30px;
+		font-size: 25px;
 	}
 	h1+p
 	{
@@ -332,19 +322,25 @@
 	}
 	h2
 	{
-		font-size: 30px;
+		font-size: 25px;
 		text-align: center;
 		width: 100%;
 		margin: 0;
 	}
 	.choix button
 	{
-		width: 70%;
+		width: 50%;
+		justify-content: center;
+	}
+	.choix i
+	{
+		margin-left: 50px;
 	}
 	.choix h4
 	{
 		font-size: 18px;
-		margin-left: -70px;
+		margin-left: 0px;
+		width: 100%;
 	}
 	.num
 	{
