--- a/sass/style-menu.css
+++ b/sass/style-menu.css
@@ -138,9 +138,13 @@ footer {
     width: 10%;
     height: auto;
   }
+  .menu_footer ul {
+    width: 50%;
+    margin-left: 510px;
+  }
 }
 
-main {
+.main {
   background: rgba(245, 244, 244, 0.986);
   border-radius: 30px 30px 0 0;
   width: 100%;
@@ -347,8 +351,8 @@ h4 {
   display: -ms-flexbox;
   display: flex;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0, 0);
+          transform: rotate(0turn) translate(0, 0);
 }
 
 .menu:hover {
@@ -370,8 +374,8 @@ h4 {
   padding: 13px;
   border-radius: 0 20px 20px 0;
   background-color: #99E2D0;
-  -webkit-transition: 900ms translateX();
-  transition: 900ms translateX();
+  -webkit-transition: 2000ms 10s translateX(80px, 0);
+  transition: 2000ms 10s translateX(80px, 0);
 }
 
 .menu:hover .valide i {
@@ -420,7 +424,7 @@ h4 {
   .fleche {
     margin-left: 50px;
   }
-  main {
+  .main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -444,7 +448,7 @@ h4 {
   .fleche {
     margin-left: 90px;
   }
-  main {
+  .main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -466,11 +470,11 @@ h4 {
     margin-top: 30px;
   }
   .titre h1 {
-    font-size: 35px;
+    font-size: 30px;
     margin-bottom: 20px;
   }
   .coeur i {
-    font-size: 35px;
+    font-size: 30px;
     margin-top: -35px;
   }
   .menu {
